- Rename `InstalledApplication` registry key values to use their `PS` names.
This allows an `InstalledApplication` object to be piped into native PowerShell cmdlets without any fluffing around.

--- a/docs/Get-ADTApplication.mdx
+++ b/docs/Get-ADTApplication.mdx
@@ -181,9 +181,9 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### PSADT.Types.InstalledApplication
 
 ### Returns a custom type with information about an installed application:
-### - UninstallKey
-### - UninstallParentKey
-### - UninstallSubKey
+### - PSPath
+### - PSParentPath
+### - PSChildName
 ### - ProductCode
 ### - DisplayName
 ### - DisplayVersion
